--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/apfel-grotezk": "^5.0.7",
+		"@maptiler/sdk": "^2.0.1",
 		"maplibre-gl": "^3.6.2"
 	}
 }
